# api-mongodb-cplusplus

./: .gitignore  CMakeLists.txt  readme.md  vcpkg.json
src/: main.cpp
src/api/: AppConfig.hpp
src/api/config/: SwaggerDoc.hpp
src/api/config/Auth/: AuthenticateHandler.hpp  AuthenticateObject.hpp
src/api/controllers/: UserController.hpp
src/api/data/: Connexion.cpp  Connexion.hpp
src/api/data/dto/: JsonReponse.hpp  JsonUser.hpp  JsonUserCreateOrUpdate.hpp  JsonUserLogin.hpp
src/api/data/model/: Document.hpp  User.hpp
src/api/data/repository/: UserRepository.cpp  UserRepository.hpp
src/api/utility/: SwaggerDoc.hpp  UUID.hpp
src/utility/: Time.hpp
